data/issues_nolabel/nolabel_test_11617.txt
Error Building from source with ARM processor gif_io/png_io errors

System information


Have I written custom code (as opposed to using a stock example script provided in TensorFlow):
I'm following this guide for installing tensorflow on a raspberry pi, because it most closely resembles the environment that I am building on.
I noticed that there were a couple of things that had changed since those instructions were written, so if things had changed in the code when I checked them, I didn't follow those instructions for changing the code. (I don't think the error is because of these instructions, which is why I am posting here, instead of there).


OS Platform and Distribution (e.g., Linux Ubuntu 16.04):
I am building in a Debian Jessie environment, that I have built exclusively for the purposes of building tensorflow on ARM, with the latest versions of gcc/g++ that I could find.


TensorFlow installed from (source or binary):
Source


TensorFlow version (use command below):
I'm assuming the most recent, because I just cloned it yesterday.
The script errors because tf hasn't actually made it to the installation step.
== cat /etc/issue ===============================================
Linux 3.14.38-yocto-00005-ge466b18 #1 SMP PREEMPT Tue May 30 10:41:58 MDT 2017 armv7l GNU/Linux
VERSION_ID="8"
VERSION="8 (jessie)"
== compiler =====================================================
c++ (Debian 4.8.4-1) 4.8.4
gcc version 4.8.4 (Debian 4.8.4-1)
Copyright (C) 2013 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
== uname -a =====================================================
Linux 3.14.38-yocto-00005-ge466b18 #1 SMP PREEMPT Tue May 30 10:41:58 MDT 2017 armv7l GNU/Linux
== check pips ===================================================
numpy (1.8.2)


Python version:
Python 2.7.9


Bazel version (if compiling from source):
Build label: 0.4.5- (@non-git)


CUDA/cuDNN version:"
N/A


GPU model and memory:
N/A


Exact command to reproduce:
bazel build -c opt //tensorflow/tools/pip_package:build_pip_package
Though, I've also gotten errors with


bazel build -c opt --copt="-mfpu=neon-vfpv4" --copt="-funsafe-math-optimizations" --copt="-ftree-vectorize" --copt="-fomit-frame-pointer" --local_resources 1024,1.0,1.0 --verbose_failures tensorflow/tools/pip_package:build_pip_package

and
bazel build -c opt --copt="-mfpu=neon-vfpv4" --copt="-funsafe-math-optimizations" --copt="-ftree-vectorize" --copt="-fomit-frame-pointer" --local_resources 1024,1.0,1.0 --verbose_failures tensorflow/tools/pip_package:build_pip_package

Describe the problem
I am getting the included error when I build tensorflow. I've gotten the same error with the png_io.cc file as well. I installed the libpng-dev library as was recommended here. Unlike in that example, that library did not exist on the computer I was installing it on (neither did libgif-dev, which was my guess for the gif library error). Is there a reason these libraries should be installed at the point that I run that command? Will I also need a libjpg-dev or something of the sort?
Source code / logs
ERROR: /root/tf/tensorflow/tensorflow/core/BUILD:1357:1: C++ compilation of rule '//tensorflow/core:gif_internal' failed: gcc failed: error executing command /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 '-D_FORTIFY_SOURCE=1' -DNDEBUG ... (remaining 106 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from tensorflow/core/lib/gif/gif_io.cc:20:0:
./tensorflow/core/platform/gif.h:26:2: error: #error Define the appropriate PLATFORM_<foo> macro for this platform
 #error Define the appropriate PLATFORM_<foo> macro for this platform
  ^
tensorflow/core/lib/gif/gif_io.cc:33:20: error: 'GifFileType' was not declared in this scope
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                    ^
tensorflow/core/lib/gif/gif_io.cc:33:33: error: 'gif_file' was not declared in this scope
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                                 ^
tensorflow/core/lib/gif/gif_io.cc:33:43: error: 'GifByteType' was not declared in this scope
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                                           ^
tensorflow/core/lib/gif/gif_io.cc:33:56: error: 'buf' was not declared in this scope
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                                                        ^
tensorflow/core/lib/gif/gif_io.cc:33:61: error: expected primary-expression before 'int'
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                                                             ^
tensorflow/core/lib/gif/gif_io.cc:33:69: error: expression list treated as compound expression in initializer [-fpermissive]
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                                                                     ^
tensorflow/core/lib/gif/gif_io.cc:33:71: error: expected ',' or ';' before '{' token
 int input_callback(GifFileType* gif_file, GifByteType* buf, int size) {
                                                                       ^
tensorflow/core/lib/gif/gif_io.cc:111:1: error: expected '}' at end of input
 }  // namespace tensorflow
 ^
tensorflow/core/lib/gif/gif_io.cc:111:1: error: expected '}' at end of input
Target //tensorflow/tools/pip_package:build_pip_package failed to build